@@ -6,6 +6,7 @@ Core:
   . Added zend_call_stack_get implementation for NetBSD, DragonFlyBSD,
     Solaris and Haiku. (David Carlier)
   . Enabled ifunc checks on FreeBSD from the 12.x releases. (Freaky)
+  . Changed the type of PHP_DEBUG and PHP_ZTS constants to bool. (haszi)
 
 Date:
   . Added DateTime[Immutable]::createFromTimestamp. (Marc Bennewitz)
